PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/RepetitionRuleWithinPatterns.par
RepetitionRuleWithinPatterns {
map three([Int] input) : [Int] res {
    res[INDEX] = input[2]
}
seq main() : Void {
}
}